[package]
name = "resort3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.94", features = ["derive"] }
serde_json = "1.0.94"
sqparse = { path = "../sqparse"}
# sqparse = { git = "https://github.com/uniboi/sqparse", branch = "preprocessors" }
